k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dnd-campaign-organizer
  labels:
    name: dnd-campaign-organizer
    app: dnd-campaign-organizer
